# password-manager

./: .gitignore  CMakeLists.txt  Makefile  build.sh  passwords.txt
include/: encryption.hpp  generator.hpp  manager.hpp
include/cryptopp/: pwdbased.h
src/: encryption.cpp  generator.cpp  main.cpp  manager.cpp
